feat(gameplay-service): implement ST-404 websocket events
